--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: "3.7"
 
-services: 
+services:
   database:
     image: postgres
     container_name: database_rentx_api
     restart: always
-    ports: 
+    ports:
       - 55432:5432
     environment:
       - POSTGRES_USER=docker
@@ -13,18 +13,18 @@ services:
       - POSTGRES_DB=rentx
     volumes:
       - pgdata:/data/postgres
-  app:
-    build: .
-    container_name: rentx
-    ports:
-      - 3333:3333
-    volumes:
-      - .:/usr/app
-    links:
-      - database
-    depends_on: 
-      - database
+  # app:
+  #   build: .
+  #   container_name: rentx
+  #   ports:
+  #     - 3333:3333
+  #   volumes:
+  #     - .:/usr/app
+  #   links:
+  #     - database
+  #   depends_on: 
+  #     - database
 
-volumes: 
+volumes:
   pgdata:
-     driver: local
+    driver: local
