--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,17 +13,17 @@ services:
       - POSTGRES_DB=rentx
     volumes:
       - pgdata:/data/postgres
-  # app:
-  #   build: .
-  #   container_name: rentx
-  #   ports:
-  #     - 3333:3333
-  #   volumes:
-  #     - .:/usr/app
-  #   links:
-  #     - database
-  #   depends_on: 
-  #     - database
+  app:
+    build: .
+    container_name: rentx
+    ports:
+      - 3333:3333
+    volumes:
+      - .:/usr/app
+    links:
+      - database
+    depends_on:
+      - database
 
 volumes:
   pgdata:
