--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,3 +32,16 @@ jobs:
           key: ${{ secrets.SSH_KEY }}
           source: "., !node_modules"
           target: "~/app/rentx_api"
+          
+      - name: multiple command
+        uses: appleboy/ssh-action@master
+        with:
+          hhost: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          port: ${{ secrets.SSH_PORT }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            cd ~/app/rentx_api
+            yarn
+            ./node_modules/.bin/typeorm migration:run
+            pm2 restart rentx_api
