--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/nodemailer": "^6.4.4",
+    "@types/redis": "^4.0.9",
     "aws-sdk": "^2.1037.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
@@ -30,6 +31,8 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.6.5",
     "pg": "^8.5.1",
+    "rate-limiter-flexible": "^2.3.6",
+    "redis": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.1.6",
     "swagger-ui-express": "^4.1.6",
